# TTD-Basic-Template

./: LICENSE  README.MD  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
src/tdd/: main.py
tests/: test_main.py
