[metadata]
name = tdd
description = A simple test driven development template project
author = Kevin Meinon
author_email = kevin.meinon@gmail.com
license = MIT
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
platforms = Linux, Windows
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11

[options]
packages = tdd
python_requires = >=3.10
install_requires =
    rich>=13
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=7
    pytest-cov>=4
    flake8>=6
    tox>=4
    mypy>=1.5

[options.package_data]
tdd = py.typed

[flake8]
max-line-length = 120